Fix charset deprecation warning in FirebaseStorageService
Co-authored-by: iam-ravi-12 <79560130+iam-ravi-12@users.noreply.github.com>